changed styles approach, added custom styles example

--- a/src/components/month/style/month.module.styl
+++ b/src/components/month/style/month.module.styl
@@ -9,6 +9,10 @@ $headerMonthHeight = 30px;
   white-space: normal;
 }
 
+.headerMonthWrapper {
+
+}
+
 .headerMonth {
   height: $headerMonthHeight;
   line-height: $headerMonthHeight;
